commit CRUD action

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,28 @@
      padding-top: 40px;
 
  }
+
+ #sum{
+     font-size: 3rem;
+     margin-left: 1rem;
+     margin-right: 1rem;
+ }
+
+ #sumSegment{
+     margin-bottom: 3rem;
+     padding: 3rem;
+ }
+
+ #action{
+     .item{
+        padding: 0rem;
+     }
+ }
+
+
+ .pdb40px{
+     padding-bottom: 40px;
+ }
+
+
+
