--- a/app/views/usage_details/_usageAmount.html.erb
+++ b/app/views/usage_details/_usageAmount.html.erb
@@ -1,7 +1,7 @@
 <% @usageAmounts.each do |usageAmount| %>
 <tr>
   <td>
-    <%= select(usageAmount, :method, {'折半': 0, 'あいか':1, '除外':2}, {selected: usageAmount.method}, { class: 'ui dropdown'}) %>
+    <%= select(usageAmount, :division, {'折半': 0, 'あいか':1, '除外':2}, {selected: usageAmount.division}, { class: 'ui dropdown'}) %>
     <!-- <select class="ui dropdown">
       <option value="0">折半</option>
       <option value="1">あいか</option>
@@ -11,6 +11,7 @@
   <td><%= usageAmount.usageDate %></td>
   <td><%= usageAmount.usageStore %></td>
   <td><%= usageAmount.amount %></td>
+  <td><%= link_to "削除", usageAmount, method: :delete%></td>
 </tr>
 
 
