--- a/app/views/usage_details/index.html.erb
+++ b/app/views/usage_details/index.html.erb
@@ -1,9 +1,11 @@
 <div class="ui menu">
-    <div class="item"><h2 class="">CalcApp</h2></div>
-    <div class="right menu">
-        <%= link_to '一覧', '/', class:'item'%>
-        <%= link_to '新規作成', new_usage_detail_path, class:'item'%>
-    </div>
+  <div class="item">
+    <i class="bordered inverted teal yen sign icon "></i>
+  </div>
+  <div class="right menu">
+    <%= link_to '一覧', '/', class:'item'%>
+    <%= link_to '新規作成', new_usage_detail_path, class:'item'%>
+  </div>
 </div>
 <div class="ui container">
   <h1 class="ui huge header">
